@@ -1,3 +1,8 @@
+2014-11-20  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/63962
+	* gcc.dg/tree-ssa/forwprop-30.c: New testcase.
+
 2014-11-20   Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/63677
